--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>titulo do site</h1>
+            <h1>cursos gratis</h1>
         </header>
         <article>
-            <h2>artigo 001</h2>
-            <p>texto do artigo 001</p>
+            <h2>curso html e css</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quos non recusandae eaque voluptatibus, odio atque voluptate neque ad sint! Culpa sint, iusto esse excepturi id aperiam porro quas ducimus neque!</p>
         </article>
         <article>
-            <h2>artigo 002</h2>
-            <p>texto do artigo 002</p>
+            <h2>curso de javascript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, consequuntur reiciendis, incidunt facilis necessitatibus similique quasi dicta voluptate consectetur possimus corrupti, quibusdam earum numquam eius iure pariatur omnis nam quis./p>
         </article>
     </main>
 </body>
